tools/crates/vendor/toml_edit/tests/fixtures/invalid/array/no-comma-2.stderr
TOML parse error at line 1, column 18
  |
1 | no-comma-2 = [ 1 2 3 ]
  |                  ^
invalid array
expected `]`
